--- a/index.html
+++ b/index.html
@@ -136,30 +136,20 @@
     <div class="box">
         <a href="index2.html">
 
-            <img src="/WhatsApp Image 2023-04-18 at 21.19.07.jpg" alt="">
+            <img src="./WhatsApp Image 2023-04-18 at 21.19.07.jpg" alt="">
         </a>
     </div>
 
     <div class="box">
-        <a href="index3.html"><img src="/WhatsApp Image 2023-04-18 at 21.50.18.jpg" alt=""></a>
+        <a href="index3.html"><img src="./WhatsApp Image 2023-04-18 at 21.50.18.jpg" alt=""></a>
     </div>
 
     <div class="box">
-        <a href="module3.html"><img src="/lclogo.jpg" alt=""></a>
+        <a href="module3.html"><img src="./lclogo.jpg" alt=""></a>
         
     </div>
 
-    <div class="box">
-        <img src="" alt="">
-    </div>
-
-    <div class="box">
-        <img src="" alt="">
-    </div>
-
-    <div class="box">
-        <img src="" alt="">
-    </div>
+    
 
 </div>
 
