--- a/index2.html
+++ b/index2.html
@@ -50,12 +50,12 @@
                 JavaScript's dynamic capabilities include runtime object construction, variable parameter lists, function variables, dynamic script creation (via eval), object introspection (via for...in and Object utilities), and source-code recovery (JavaScript functions store their source text and can be retrieved through toString()).
                 
                 This section is dedicated to the JavaScript language itself, and not the parts that are specific to Web pages or other host environments. For information about APIs that are specific to Web pages, please see Web APIs and DOM.</p>
-           <img src="/Screenshot (16).png" alt=""height="400vh">
-           <img src="/Screenshot (17).png" alt=""height="400vh">
-           <img src="/Screenshot (18).png" alt=""height="400vh">
-           <img src="/WhatsApp Image 2023-04-18 at 22.30.42.jpg" alt=""height="400vh">
+           <img src="./Screenshot (16).png" alt=""height="400vh">
+           <img src="./Screenshot (17).png" alt=""height="400vh">
+           <img src="./Screenshot (18).png" alt=""height="400vh">
+           <img src="./WhatsApp Image 2023-04-18 at 22.30.42.jpg" alt=""height="400vh">
            
 
 </body>
-height="400vh"
+
 </html>
