--- a/index3.html
+++ b/index3.html
@@ -7,6 +7,6 @@
     <p>AutoCAD is a commercial computer-aided design (CAD) and drafting software application. Developed and marketed by Autodesk,[1] AutoCAD was first released in December 1982 as a desktop app running on microcomputers with internal graphics controllers.[2] Before AutoCAD was introduced, most commercial CAD programs ran on mainframe computers or minicomputers, with each CAD operator (user) working at a separate graphics terminal.[3] AutoCAD is also available as mobile and web apps. AutoCAD is primarily used for 2 Dimensional drawings, and even though 3D modeling is available in AutoCAD other computer-aided design software like Fusion 360, Inventor and Solidworks are preferred in 3D modeling.
 
         AutoCAD is used in industry, by architects, project managers, engineers, graphic designers, city planners and other professionals.</p>
-      <img src="/Screenshot (2).png" alt=""height="400vh">
-      <img src="/Screenshot (3).png" alt=""height="400vh">
-      <img src="/WhatsApp Image 2023-04-18 at 22.29.56.jpg" alt=""height="400vh">
+      <img src="./Screenshot (2).png" alt=""height="400vh">
+      <img src="./Screenshot (3).png" alt=""height="400vh">
+      <img src="./WhatsApp Image 2023-04-18 at 22.29.56.jpg" alt=""height="400vh">
